--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Damla Kara | Hakkımda</title>
 </head>
 <body>
     <!-- Bu bölüm sayfanın başlığını içerir -->
@@ -13,5 +13,34 @@
     <h3> Hakkımda </h3>
     <p>Merhaba ben Damla Kara! Yeni mezun oldum ve Ankara'da yaşıyorum. </p>
     <p>Film ve dizi izlemeyi severim. En sevdiğim genre rom-com'dur.</p>
+
+    <h3>İlgi Alanlarım</h3>
+
+    <ol>
+        <li>Film</li>
+        <ul>
+            <li>How to Lose a Guy in 10 Days?</li>
+            <li>Howl's Moving Castle</li>
+            <li>Gone Girl</li>
+        </ul>
+        <li>Dizi</li>
+        <ul>
+            <li> <a href="https://www.imdb.com/title/tt2467372/"> Brooklyn Nine-Nine</a></li>
+            <li>Modern Family</li>
+            <li>Adını Feriha Koydum</li>
+        </ul>
+        <li>Kitap</li>
+        <ul>
+            <li><a href="https://www.goodreads.com/book/show/40961427-1984">1984</a> </li>
+            <li>Pride & Prejudice</li>
+            <li>My Sweet Orange Tree</li>
+        </ul>
+    </ol>
+
+    <h2>Sevdiğim Filmler</h2>
+    <figure>
+        <img src="./film.jpg"  />
+        <figcaption>How to Lose a Guy in 10 Days bir rom-com filmidir. Andie'nin giydiği iconic elbise </figcaption>
+    </figure>
 </body>
 </html>
